@@ -142,7 +142,7 @@
     od_object <- filterIsolationWindow(as(object, "OnDiskMSnExp"), mz = x["mz"])
     if (!length(idx) | !length(od_object))
         return(Spectra(
-            new("Spectrum2", fromFile = fromFile),
+            new("Spectrum2", fromFile = fromFile, rt = x["rt"]),
             elementMetadata = DataFrame(
                 ms2_peak_id = CharacterList(character()),
                 ms2_peak_cor = NumericList(numeric()))))
@@ -162,24 +162,24 @@
         chr_2 <- Chromatograms(list(chr_2))
     if (!length(chr_2))
         return(Spectra(
-            new("Spectrum2", fromFile = fromFile),
+            new("Spectrum2", fromFile = fromFile, rt = x["rt"]),
             elementMetadata = DataFrame(
                 ms2_peak_id = CharacterList(character()),
                 ms2_peak_cor = NumericList(numeric()))))
-    cors <- vapply(chr_2@.Data, xcms:::.correlate_chromatogram, y = chr_1[1, 1],
+    cors <- vapply(chr_2@.Data, .correlate_chromatogram, y = chr_1[1, 1],
                    numeric(1), align = "approx")
     pks <- pks[which(cors >= minCor), , drop = FALSE]
     if (nrow(pks)) {
         sp <- new("Spectrum2", fromFile = fromFile, centroided = TRUE,
                   mz = pks[, "mz"], intensity = pks[, column],
-                  precursorMz = x["mz"])
+                  precursorMz = x["mz"], rt = median(pks[, "rt"]))
         df <- DataFrame(matrix(ncol = 0, nrow = 1))
         df$ms2_peak_id <- CharacterList(rownames(pks), compress = FALSE)
         df$ms2_peak_cor <- NumericList(cors[cors >= minCor], compress = FALSE)
         Spectra(sp, elementMetadata = df)
     } else {
         Spectra(
-            new("Spectrum2", fromFile = fromFile),
+            new("Spectrum2", fromFile = fromFile, rt = x["rt"]),
             elementMetadata = DataFrame(
                 ms2_peak_id = CharacterList(character()),
                 ms2_peak_cor = NumericList(numeric())))
