@@ -1,5 +1,8 @@
 Changes in version 3.11.3
 
+- `reconstructChromPeakSpectra`: ensure a retention time is reported for
+  reconstructed MS2 spectra (issue #485).
+- Change default for `expandRt` to `0` in `reconstructChromPeakSpectra`.
 - Fix error in `refineChromPeaks,MergeNeighboringPeaksParam` if no peaks found
   to be merged.
 
